# indonesia

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  crate-layers.toml  rust-toolchain.toml  test-layout-allowlist.txt
crates/nova-ai/: Cargo.toml
crates/nova-ai-codegen/: Cargo.toml
crates/nova-ai-codegen/src/: lib.rs
crates/nova-ai/src/: actions.rs  anonymizer.rs  audit.rs  cache.rs  cancel.rs  client.rs  cloud.rs  code_edit_policy.rs  completion.rs  completion_context.rs  completion_filter.rs  completion_ranking.rs  completion_ranking_prompt.rs  completion_validation.rs  config.rs  context.rs  diff.rs  error.rs  features.rs  http.rs  lib.rs  llm_privacy.rs  patch.rs  poison.rs  privacy.rs  project_database.rs  provider.rs  safety.rs  semantic_search.rs  stream_decode.rs  types.rs  utf8_pending.rs  util.rs  workspace.rs
crates/nova-ai/tests/: ai_eval.rs  cloud_multi_token.rs  embedding_semantic_search.rs  explain_error_providers.rs  in_process_llama_smoke.rs  llm_cache.rs  local_backends.rs  patch_engine.rs  patch_safety.rs  project_database_adapters.rs  semantic_context_builder.rs  semantic_search_factory.rs  semantic_search_incremental.rs
crates/nova-apt/: Cargo.toml
crates/nova-apt/src/: lib.rs
crates/nova-apt/tests/: annotation_processing.rs
crates/nova-bugreport/: Cargo.toml  build.rs
crates/nova-bugreport/src/: lib.rs  poison.rs  redact.rs
crates/nova-build/: Cargo.toml
crates/nova-build-bazel/: Cargo.toml
crates/nova-build-bazel/src/: aquery.rs  bsp.rs  bsp_config.rs  build.rs  cache.rs  command.rs  lib.rs  orchestrator.rs  poison.rs  workspace.rs
crates/nova-build-bazel/tests/: aquery_parser.rs  bsp.rs  cache.rs  discovery.rs  fake_bsp.rs  harness.rs  orchestrator.rs  workspace_aquery.rs  workspace_bsp.rs  workspace_build.rs  workspace_cache.rs  workspace_cache_invalidation.rs  workspace_compile_info_for_file.rs  workspace_compile_info_for_file_bsp.rs  workspace_inverse_sources.rs  workspace_java_owners.rs  workspace_owning_targets.rs
crates/nova-build-model/: Cargo.toml
crates/nova-build-model/src/: build_files.rs  generated_roots_snapshot.rs  gradle_snapshot.rs  groovy_scan.rs  lib.rs  model.rs  package.rs
crates/nova-build-model/tests/: gradle_snapshot.rs
crates/nova-build/src/: cache.rs  command.rs  fs_cleanup.rs  gradle.rs  javac.rs  jpms.rs  lib.rs  maven.rs  module_graph.rs  orchestrator.rs  poison.rs
crates/nova-build/tests/: cache_concurrency.rs  command_runner.rs  gradle_build.rs  gradle_snapshot.rs  module_graph.rs  orchestrator.rs  parsing.rs
crates/nova-cache/: Cargo.toml
crates/nova-cache/src/: ast_cache.rs  cache_dir.rs  derived_cache.rs  error.rs  fingerprint.rs  gc.rs  lib.rs  lock.rs  metadata.rs  pack.rs  path.rs  prune.rs  query_disk_cache.rs  shard_index.rs  store.rs  util.rs
crates/nova-cache/tests/: ast_cache.rs  ast_cache_concurrency.rs  atomic_write.rs  cache_package_install_fast_fingerprints.rs  derived_cache.rs  fingerprint.rs  fingerprint_project_root.rs  fingerprint_streaming.rs  gc.rs  metadata_roundtrip.rs  pack_large_file.rs  prune.rs  query_disk_cache.rs  shard_index.rs  tests.rs
crates/nova-classpath/: Cargo.toml
crates/nova-classpath/benches/: index.rs
crates/nova-classpath/src/: lib.rs  module_name.rs  persist.rs
crates/nova-classpath/testdata/: named-module.jmod
crates/nova-classpath/tests/: binary_name_enumeration.rs  classpath_order.rs  module_aware_index.rs
crates/nova-cli/: Cargo.toml
crates/nova-cli/src/: diagnostics_output.rs  extensions.rs  lib.rs  main.rs  refactor_apply.rs
crates/nova-cli/tests/: cli.rs  extensions.rs  real_projects.rs  refactor_cli.rs  tests.rs
crates/nova-config/: Cargo.toml
crates/nova-config-metadata/: Cargo.toml
crates/nova-config-metadata/src/: lib.rs
crates/nova-config/src/: diagnostics.rs  lib.rs  schema.rs  validation.rs
crates/nova-config/tests/: diagnostics.rs  discovery.rs  jdk_config.rs  schema_rules.rs  schema_snapshot.rs  tests.rs
crates/nova-core/: Cargo.toml
crates/nova-core/benches/: critical_paths.rs
crates/nova-core/src/: debug_config.rs  diagnostic.rs  edit.rs  fs.rs  id.rs  lib.rs  name.rs  panic_util.rs  path.rs  sanitize.rs  text.rs
crates/nova-core/tests/: text_props.rs
crates/nova-dap/: Cargo.toml  README.md
crates/nova-dap/fuzz/: Cargo.toml
crates/nova-dap/src/: async_util.rs  breakpoints.rs  dap_tokio.rs  error.rs  eval_context.rs  format.rs  hardening.rs  hot_swap.rs  java_type.rs  javac.rs  jdwp.rs  lib.rs  main.rs  object_registry.rs  server.rs  session.rs  smart_step_into.rs  stream_debug.rs  wire_debugger.rs  wire_format.rs  wire_server.rs  wire_stream_debug.rs  wire_stream_eval.rs
crates/nova-dap/tests/: attach_hostname.rs  breakpoint_locations.rs  cancel.rs  config_stdio.rs  configuration_done_before_launch.rs  configuration_done_resumes_command_launch.rs  dap_conformance.rs  dap_java_launch.rs  dap_launch.rs  dap_restart.rs  dap_session.rs  debugger_ux.rs  enable_method_return_values.rs  (+18 more)
crates/nova-db/: Cargo.toml
crates/nova-decompile/: Cargo.toml
crates/nova-deps-cache/: Cargo.toml
crates/nova-ext/: Cargo.toml
crates/nova-format/: Cargo.toml
crates/nova-framework/: Cargo.toml
crates/nova-framework-builtins/: Cargo.toml
crates/nova-framework-dagger/: Cargo.toml
crates/nova-framework-jpa/: Cargo.toml
crates/nova-framework-lombok/: Cargo.toml
crates/nova-framework-mapstruct/: Cargo.toml
crates/nova-framework-micronaut/: Cargo.toml
crates/nova-framework-quarkus/: Cargo.toml
crates/nova-framework-spring/: Cargo.toml
fuzz/: .gitignore  Cargo.toml
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: format_java.rs  fuzz_ai_diff_filter.rs  fuzz_ai_patch_parse.rs  fuzz_archive_read.rs  fuzz_classfile.rs  fuzz_completion.rs  fuzz_config_metadata.rs  fuzz_decompile_classfile.rs  fuzz_format.rs  fuzz_junit_report.rs  fuzz_on_type_format.rs  fuzz_properties_parse.rs  fuzz_range_format.rs  fuzz_reparse_java.rs  fuzz_reparse_java_sequence.rs  fuzz_syntax_literals.rs  fuzz_syntax_parse.rs  fuzz_yaml_parse.rs  parse_java.rs  refactor_smoke.rs  utils.rs
(+2331 files in other folders)
