[workspace]
resolver = "2"
members = [
    "crates/nova-ai",
    "crates/nova-apt",
    "crates/nova-archive",
    "crates/nova-build",
    "crates/nova-build-bazel",
    "crates/nova-cache",
    "crates/nova-classfile",
    "crates/nova-classpath",
    "crates/nova-cli",
    "crates/nova-config",
    "crates/nova-config-metadata",
    "crates/nova-core",
    "crates/nova-dap",
    "crates/nova-db",
    "crates/nova-decompile",
    "crates/nova-flow",
    "crates/nova-format",
    "crates/nova-framework",
    "crates/nova-framework-dagger",
    "crates/nova-framework-jpa",
    "crates/nova-framework-lombok",
    "crates/nova-framework-spring",
    "crates/nova-framework-mapstruct",
    "crates/nova-fuzzy",
    "crates/nova-hir",
    "crates/nova-ide",
    "crates/nova-index",
    "crates/nova-types",
    "crates/nova-vfs",
    "crates/nova-jdk",
    "crates/nova-jdwp",
    "crates/nova-lsp",
    "crates/nova-syntax",
    "crates/nova-testing",
    "crates/nova-workspace",
    "crates/nova-perf",
    "crates/nova-project",
    "crates/nova-properties",
    "crates/nova-refactor",
    "crates/nova-remote-proto",
    "crates/nova-resolve",
    "crates/nova-router",
    "crates/nova-scheduler",
    "crates/nova-storage",
    "crates/nova-test-utils",
    "crates/nova-worker",
    "crates/nova-yaml",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
