[workspace]
resolver = "2"
members = [
    "crates/nova-ai",
    "crates/nova-apt",
    "crates/nova-archive",
    "crates/nova-build",
    "crates/nova-build-bazel",
    "crates/nova-cache",
    "crates/nova-deps-cache",
    "crates/nova-memory",
    "crates/nova-metrics",
    "crates/nova-classfile",
    "crates/nova-classpath",
    "crates/nova-cli",
    "crates/nova-config",
    "crates/nova-config-metadata",
    "crates/nova-core",
    "crates/nova-ids",
    "crates/nova-dap",
    "crates/nova-stream-debug",
    "crates/nova-db",
    "crates/nova-decompile",
    "crates/nova-ext",
    "crates/nova-flow",
    "crates/nova-format",
    "crates/nova-framework",
    "crates/nova-framework-dagger",
    "crates/nova-framework-parse",
    "crates/nova-framework-jpa",
    "crates/nova-framework-lombok",
    "crates/nova-framework-micronaut",
    "crates/nova-framework-spring",
    "crates/nova-framework-mapstruct",
    "crates/nova-framework-web",
    "crates/nova-framework-quarkus",
    "crates/nova-fuzzy",
    "crates/nova-hir",
    "crates/nova-modules",
    "crates/nova-ide",
    "crates/nova-index",
    "crates/nova-types",
    "crates/nova-types-bridge",
    "crates/nova-vfs",
    "crates/nova-syntax",
    "crates/nova-jdk",
    "crates/nova-jdwp",
    "crates/nova-lsp",
    "crates/nova-testing",
    "crates/nova-workspace",
    "crates/nova-bugreport",
    "crates/nova-perf",
    "crates/nova-project",
    "crates/nova-properties",
    "crates/nova-refactor",
    "crates/nova-remote-proto",
    "crates/nova-remote-rpc",
    "crates/nova-resolve",
    "crates/nova-router",
    "crates/nova-scheduler",
    "crates/nova-storage",
    "crates/nova-test-utils",
    "crates/nova-worker",
    "crates/nova-yaml",
    "crates/xtask",
]

[workspace.package]
edition = "2021"
# Single source of truth for the Nova version.
#
# Release tags MUST match this version prefixed with `v`, e.g. `v0.1.0`.
version = "0.1.0"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
authors = ["Nova contributors"]
repository = "https://github.com/wilson-anysphere/indonesia"

[workspace.dependencies]
anyhow = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Config for `dist` (cargo-dist): https://axodotdev.github.io/cargo-dist/
[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
allow-dirty = ["ci"]
checksum = "sha256"
install-path = "CARGO_HOME"
hosting = "github"
install-updater = false

[profile.dist]
inherits = "release"
lto = "thin"
