[workspace]
resolver = "2"
members = [
    "crates/nova-ai",
    "crates/nova-ai-codegen",
    "crates/nova-apt",
    "crates/nova-archive",
    "crates/nova-build",
    "crates/nova-build-model",
    "crates/nova-build-bazel",
    "crates/nova-cache",
    "crates/nova-deps-cache",
    "crates/nova-memory",
    "crates/nova-metrics",
    "crates/nova-classfile",
    "crates/nova-classpath",
    "crates/nova-cli",
    "crates/nova-config",
    "crates/nova-config-metadata",
    "crates/nova-core",
    "crates/nova-ids",
    "crates/nova-dap",
    "crates/nova-stream-debug",
    "crates/nova-db",
    "crates/nova-decompile",
    "crates/nova-ext",
    "crates/nova-ext-abi",
    "crates/nova-devtools",
    "crates/nova-flow",
    "crates/nova-format",
    "crates/nova-framework",
    "crates/nova-framework-builtins",
    "crates/nova-framework-dagger",
    "crates/nova-framework-parse",
    "crates/nova-framework-jpa",
    "crates/nova-framework-lombok",
    "crates/nova-framework-micronaut",
    "crates/nova-framework-spring",
    "crates/nova-framework-mapstruct",
    "crates/nova-framework-web",
    "crates/nova-framework-quarkus",
    "crates/nova-fuzzy",
    "crates/nova-hir",
    "crates/nova-modules",
    "crates/nova-ide",
    "crates/nova-index",
    "crates/nova-types",
    "crates/nova-types-bridge",
    "crates/nova-types-signature",
    "crates/nova-vfs",
    "crates/nova-syntax",
    "crates/nova-jdk",
    "crates/nova-jdwp",
    "crates/nova-lsp",
    "crates/nova-testing",
    "crates/nova-workspace",
    "crates/nova-bugreport",
    "crates/nova-perf",
    "crates/nova-project",
    "crates/nova-process",
    "crates/nova-properties",
    "crates/nova-refactor",
    "crates/nova-remote-proto",
    "crates/nova-remote-rpc",
    "crates/nova-resolve",
    "crates/nova-router",
    "crates/nova-scheduler",
    "crates/nova-storage",
    "crates/nova-test-utils",
    "crates/nova-worker",
    "crates/nova-yaml",
    "crates/xtask",
    "examples/nova-ext-wasm-example-todos",
]

[workspace.package]
edition = "2021"
# Single source of truth for the Nova version.
#
# Release tags MUST match this version prefixed with `v`, e.g. `v0.1.0`.
version = "0.1.0"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Nova contributors"]
repository = "https://github.com/wilson-anysphere/indonesia"

[workspace.dependencies]
anyhow = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Config for `dist` (cargo-dist): https://axodotdev.github.io/cargo-dist/
[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
allow-dirty = ["ci"]
checksum = "sha256"
install-path = "CARGO_HOME"
hosting = "github"
install-updater = false

[profile.dist]
inherits = "release"
lto = "thin"

[profile.test]
# The default `test` profile inherits from `dev`, which includes full debug info.
# For large crates (like `nova-lsp`) and their transitive WASM/tooling dependencies,
# test binaries can be extremely heavy to link and can push the linker over the 4G
# RLIMIT_AS budget enforced by `scripts/cargo_agent.sh`.
#
# Disable debuginfo in `test` profile to reduce link-time memory pressure and
# stay under the default `scripts/cargo_agent.sh` RLIMIT_AS budget.
debug = 0
# Keep debug/test builds under the default `scripts/cargo_agent.sh` RLIMIT_AS budget
# when enabling WASM extension validation (Wasmtime + Cranelift are extremely heavy
# with full debug info enabled).
[profile.dev.package.wasmtime]
debug = 0
[profile.dev.package.wasmtime-asm-macros]
debug = 0
[profile.dev.package.wasmtime-cranelift]
debug = 0
[profile.dev.package.wasmtime-cranelift-shared]
debug = 0
[profile.dev.package.wasmtime-environ]
debug = 0
[profile.dev.package.wasmtime-jit-icache-coherence]
debug = 0
[profile.dev.package.wasmtime-runtime]
debug = 0
[profile.dev.package.wasmtime-types]
debug = 0
[profile.dev.package.wasmtime-wmemcheck]
debug = 0
[profile.dev.package.cranelift-codegen]
debug = 0
[profile.dev.package.cranelift-codegen-meta]
debug = 0
[profile.dev.package.cranelift-frontend]
debug = 0
[profile.dev.package.cranelift-isle]
debug = 0
[profile.dev.package.cranelift-wasm]
debug = 0
[profile.dev.package.cranelift-native]
debug = 0
[profile.dev.package.cranelift-entity]
debug = 0
[profile.dev.package.cranelift-control]
debug = 0
[profile.dev.package.cranelift-bforest]
debug = 0
[profile.dev.package.cranelift-codegen-shared]
debug = 0
[profile.dev.package.gimli]
debug = 0
[profile.dev.package.object]
debug = 0
[profile.dev.package.regalloc2]
debug = 0
[profile.dev.package.target-lexicon]
debug = 0
[profile.dev.package.wasm-encoder]
debug = 0
[profile.dev.package.wasmparser]
debug = 0

# NOTE: The test profile table is declared above. Do not reintroduce a second
# `profile.test` header here—TOML would treat it as a duplicate table and Cargo
# would fail to parse the workspace.
[profile.test.package.wasmtime]
debug = 0
[profile.test.package.wasmtime-asm-macros]
debug = 0
[profile.test.package.wasmtime-cranelift]
debug = 0
[profile.test.package.wasmtime-cranelift-shared]
debug = 0
[profile.test.package.wasmtime-environ]
debug = 0
[profile.test.package.wasmtime-jit-icache-coherence]
debug = 0
[profile.test.package.wasmtime-runtime]
debug = 0
[profile.test.package.wasmtime-types]
debug = 0
[profile.test.package.wasmtime-wmemcheck]
debug = 0
[profile.test.package.cranelift-codegen]
debug = 0
[profile.test.package.cranelift-codegen-meta]
debug = 0
[profile.test.package.cranelift-frontend]
debug = 0
[profile.test.package.cranelift-isle]
debug = 0
[profile.test.package.cranelift-wasm]
debug = 0
[profile.test.package.cranelift-native]
debug = 0
[profile.test.package.cranelift-entity]
debug = 0
[profile.test.package.cranelift-control]
debug = 0
[profile.test.package.cranelift-bforest]
debug = 0
[profile.test.package.cranelift-codegen-shared]
debug = 0
[profile.test.package.gimli]
debug = 0
[profile.test.package.object]
debug = 0
[profile.test.package.regalloc2]
debug = 0
[profile.test.package.target-lexicon]
debug = 0
[profile.test.package.wasm-encoder]
debug = 0
[profile.test.package.wasmparser]
debug = 0

# `nova-lsp` test binaries (lib + integration tests) are extremely large; keep debug
# info disabled so they stay within the default `scripts/cargo_agent.sh` RLIMIT_AS
# budget.
[profile.test.package.nova-lsp]
debug = 0

[patch.crates-io]
# `lsp-types` 0.97 is missing `typeHierarchyProvider` in `ServerCapabilities`, even
# though the project implements type hierarchy requests. Patch it locally so
# `nova-lsp::server_capabilities()` can advertise the feature like the stdio
# server does.
lsp-types = { path = "third_party/lsp-types" }
