[package]
name = "nova-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nova-classfile = { path = "../crates/nova-classfile" }
nova-core = { path = "../crates/nova-core" }
nova-format = { path = "../crates/nova-format" }
nova-refactor = { path = "../crates/nova-refactor", optional = true }
nova-syntax = { path = "../crates/nova-syntax" }
nova-testing = { path = "../crates/nova-testing" }

[features]
refactor = ["dep:nova-refactor"]

[[bin]]
name = "fuzz_classfile"
path = "fuzz_targets/fuzz_classfile.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_format"
path = "fuzz_targets/fuzz_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_range_format"
path = "fuzz_targets/fuzz_range_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_on_type_format"
path = "fuzz_targets/fuzz_on_type_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_syntax_parse"
path = "fuzz_targets/fuzz_syntax_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_reparse_java"
path = "fuzz_targets/fuzz_reparse_java.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_java"
path = "fuzz_targets/parse_java.rs"
test = false
doc = false
bench = false

[[bin]]
name = "format_java"
path = "fuzz_targets/format_java.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_junit_report"
path = "fuzz_targets/fuzz_junit_report.rs"
test = false
doc = false
bench = false

[[bin]]
name = "refactor_smoke"
path = "fuzz_targets/refactor_smoke.rs"
test = false
doc = false
bench = false
required-features = ["refactor"]

[workspace]
members = ["."]
