[package]
name = "nova-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lsp-types = "0.97"
nova-fuzz-utils = { path = "../crates/nova-fuzz-utils" }
nova-archive = { path = "../crates/nova-archive" }
nova-classfile = { path = "../crates/nova-classfile" }
nova-decompile = { path = "../crates/nova-decompile" }
nova-config-metadata = { path = "../crates/nova-config-metadata" }
nova-core = { path = "../crates/nova-core" }
nova-db = { path = "../crates/nova-db" }
nova-format = { path = "../crates/nova-format" }
nova-ide = { path = "../crates/nova-ide" }
nova-refactor = { path = "../crates/nova-refactor", optional = true }
nova-properties = { path = "../crates/nova-properties" }
nova-syntax = { path = "../crates/nova-syntax" }
nova-testing = { path = "../crates/nova-testing" }
nova-yaml = { path = "../crates/nova-yaml" }
tempfile = "3"

[features]
refactor = ["dep:nova-refactor"]

[[bin]]
name = "fuzz_classfile"
path = "fuzz_targets/fuzz_classfile.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decompile_classfile"
path = "fuzz_targets/fuzz_decompile_classfile.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_format"
path = "fuzz_targets/fuzz_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_range_format"
path = "fuzz_targets/fuzz_range_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_on_type_format"
path = "fuzz_targets/fuzz_on_type_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_syntax_parse"
path = "fuzz_targets/fuzz_syntax_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_syntax_literals"
path = "fuzz_targets/fuzz_syntax_literals.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_reparse_java"
path = "fuzz_targets/fuzz_reparse_java.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_java"
path = "fuzz_targets/parse_java.rs"
test = false
doc = false
bench = false

[[bin]]
name = "format_java"
path = "fuzz_targets/format_java.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_junit_report"
path = "fuzz_targets/fuzz_junit_report.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_completion"
path = "fuzz_targets/fuzz_completion.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_config_metadata"
path = "fuzz_targets/fuzz_config_metadata.rs"
test = false
doc = false
bench = false

[[bin]]
name = "refactor_smoke"
path = "fuzz_targets/refactor_smoke.rs"
test = false
doc = false
bench = false
required-features = ["refactor"]

[[bin]]
name = "fuzz_yaml_parse"
path = "fuzz_targets/fuzz_yaml_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_properties_parse"
path = "fuzz_targets/fuzz_properties_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_reparse_java_sequence"
path = "fuzz_targets/fuzz_reparse_java_sequence.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_archive_read"
path = "fuzz_targets/fuzz_archive_read.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
