[package]
name = "nova-apt"
version.workspace = true
edition = "2021"

[dependencies]
nova-build = { path = "../nova-build" }
nova-build-model = { path = "../nova-build-model" }
nova-config = { path = "../nova-config" }
nova-core = { path = "../nova-core" }
nova-project = { path = "../nova-project" }
sha2 = "0.10"
hex = "0.4"
tokio-util = "0.7"
serde.workspace = true
serde_json.workspace = true
tracing = { workspace = true }

[dev-dependencies]
filetime = "0.2"
nova-index = { path = "../nova-index" }
nova-hir = { path = "../nova-hir" }
nova-jdk = { path = "../nova-jdk" }
nova-resolve = { path = "../nova-resolve" }
tempfile.workspace = true
