[package]
name = "nova-bugreport"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nova-config = { path = "../nova-config" }
nova-scheduler = { path = "../nova-scheduler" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing.workspace = true

