[package]
name = "nova-build-bazel"
version.workspace = true
edition = "2021"

[features]
# Optional Build Server Protocol integration. This is intentionally lightweight and only enabled
# when the user explicitly opts in.
bsp = []

[dependencies]
anyhow = "1"
blake3 = "1"
nova-core = { path = "../nova-core" }
nova-project = { path = "../nova-project" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.10.1"
