[package]
name = "nova-build-bazel"
version.workspace = true
edition = "2021"

[features]
# Optional Build Server Protocol integration. This is intentionally lightweight and only enabled
# when the user explicitly opts in.
bsp = []

[dependencies]
anyhow = "1"
blake3 = "1"
libc = "0.2"
nova-core = { path = "../nova-core" }
nova-build-model = { path = "../nova-build-model" }
nova-process = { path = "../nova-process" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10.1"

[[bin]]
name = "fake_bsp_server"
path = "src/bin/fake_bsp_server.rs"
test = false
doc = false
bench = false
required-features = ["bsp"]
