[package]
name = "nova-build"
version.workspace = true
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
nova-project = { path = "../nova-project" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
