[package]
name = "nova-build"
version.workspace = true
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
nova-build-model = { path = "../nova-build-model" }
nova-process = { path = "../nova-process" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.20.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
tracing = { workspace = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.10"
