[package]
name = "nova-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1"
hex = "0.4"
nova-core = { path = "../nova-core" }
nova-hir = { path = "../nova-hir" }
nova-syntax = { path = "../nova-syntax" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
