[package]
name = "nova-cache"
version.workspace = true
edition = "2021"

[features]
# Optional S3 support. Disabled by default.
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:tokio"]

[dependencies]
bincode = "1"
fs2 = "0.4"
hex = "0.4"
nova-core = { path = "../nova-core" }
nova-hir = { path = "../nova-hir" }
nova-storage = { path = "../nova-storage" }
nova-syntax = { path = "../nova-syntax" }
nova-remote-proto = { path = "../nova-remote-proto" }
rkyv = { version = "0.7", features = ["validation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "1"
ureq = "2"
walkdir = "2"
zstd = "0.13"

aws-config = { version = "1.1.10", optional = true }
aws-sdk-s3 = { version = "1.9.0", optional = true }
tokio = { version = "1.36.0", optional = true, features = ["rt-multi-thread", "macros"] }
