[package]
name = "nova-classpath"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
walkdir = "2.5.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

nova-classfile = { path = "../nova-classfile" }
nova-core = { path = "../nova-core" }
nova-project = { path = "../nova-project" }
nova-modules = { path = "../nova-modules" }
nova-types = { path = "../nova-types" }

[dev-dependencies]
tempfile = "3.10.1"
