[package]
name = "nova-classpath"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
walkdir = "2.5.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tracing = { workspace = true }

nova-classfile = { path = "../nova-classfile" }
nova-core = { path = "../nova-core" }
nova-deps-cache = { path = "../nova-deps-cache" }
nova-storage = { path = "../nova-storage" }
nova-build-model = { path = "../nova-build-model" }
nova-modules = { path = "../nova-modules" }
nova-types = { path = "../nova-types" }
rkyv = { version = "0.7", features = ["validation"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10.1"

[[bench]]
name = "index"
harness = false
