[package]
name = "nova-cli"
version.workspace = true
edition = "2021"
publish = false

[[bin]]
name = "nova"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nova-cache = { path = "../nova-cache" }
nova-workspace = { path = "../nova-workspace" }
nova-perf = { path = "../nova-perf" }
nova-ai = { path = "../nova-ai" }
nova-config = { path = "../nova-config" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = "0.7"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.1"
predicates = "3"
serde_json = "1"
