[package]
name = "nova-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "nova"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nova-workspace = { path = "../nova-workspace" }
nova-perf = { path = "../nova-perf" }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.1"
predicates = "3"
serde_json = "1"
