[package]
name = "nova-cli"
version.workspace = true
edition = "2021"
publish = false
default-run = "nova"

[[bin]]
name = "nova"
path = "src/main.rs"

[[bin]]
name = "nova-cli-test-lsp"
path = "tests/fixtures/nova_lsp_test_helper.rs"
# This binary exists solely as an integration-test fixture and is not intended
# to be executed as a Rust test harness.
test = false

[features]
default = ["extensions"]
extensions = ["dep:nova-ext", "nova-ext/extension-bundles"]
wasm-extensions = ["extensions", "nova-ext/wasm-extensions"]
tls = ["nova-router/tls"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nova-cache = { path = "../nova-cache" }
nova-core = { path = "../nova-core" }
nova-format = { path = "../nova-format" }
nova-refactor = { path = "../nova-refactor" }
nova-syntax = { path = "../nova-syntax" }
nova-workspace = { path = "../nova-workspace" }
nova-perf = { path = "../nova-perf" }
nova-ai = { path = "../nova-ai" }
nova-classpath = { path = "../nova-classpath" }
nova-config = { path = "../nova-config" }
nova-bugreport = { path = "../nova-bugreport" }
nova-deps-cache = { path = "../nova-deps-cache" }
nova-ext = { path = "../nova-ext", optional = true }
nova-index = { path = "../nova-index" }
nova-project = { path = "../nova-project" }
nova-router = { path = "../nova-router" }
nova-build = { path = "../nova-build" }
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = "0.7"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.1"
httpmock = "0.7"
predicates = "3"
serde_json = "1"
wat = "1.0"
