[package]
name = "nova-config-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
nova-archive = { path = "../nova-archive" }
nova-classpath = { path = "../nova-classpath" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
pretty_assertions = "1"
