[package]
name = "nova-config-metadata"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = "1"
nova-archive = { path = "../nova-archive" }
nova-classpath = { path = "../nova-classpath" }
nova-core = { path = "../nova-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
pretty_assertions = "1"
