[package]
name = "nova-config"
version.workspace = true
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = { version = "2", features = ["serde"] }
