[package]
name = "nova-config"
version.workspace = true
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
schemars = "0.8"
nova-memory = { path = "../nova-memory" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = { version = "2", features = ["serde"] }
globset = "0.4"
indexmap = { version = "2", features = ["serde"] }
regex = "1"

[dev-dependencies]
insta = { version = "1.38", features = ["json"] }
tempfile = "3"
