[package]
name = "nova-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
lsp = ["dep:lsp-types"]

[dependencies]
dunce = "1.0.5"
lasso = "0.7.3"
smol_str = "0.2.2"
text-size = "1.1.1"

lsp-types = { version = "0.97.0", optional = true }

[dev-dependencies]
criterion = "0.5"
once_cell = "1"
nova-ide = { path = "../nova-ide" }
nova-index = { path = "../nova-index" }
nova-syntax = { path = "../nova-syntax" }

[[bench]]
name = "critical_paths"
harness = false
