[package]
name = "nova-dap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

nova-core = { path = "../nova-core" }
nova-db = { path = "../nova-db" }
nova-ide = { path = "../nova-ide" }
nova-project = { path = "../nova-project" }
nova-jdwp = { path = "../nova-jdwp" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10.1"
nova-jdwp = { path = "../nova-jdwp", features = ["wire-test-support"] }
