[package]
name = "nova-dap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Nova Java debug adapter (DAP)."

[package.metadata.dist]
dist = true

[dependencies]
async-recursion = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"

nova-core = { path = "../nova-core" }
nova-db = { path = "../nova-db" }
nova-ide = { path = "../nova-ide" }
nova-project = { path = "../nova-project" }
nova-jdwp = { path = "../nova-jdwp" }
nova-stream-debug = { path = "../nova-stream-debug" }
nova-metrics = { path = "../nova-metrics" }

# Hardening / crash recovery support.
nova-bugreport = { path = "../nova-bugreport" }
nova-config = { path = "../nova-config" }
nova-scheduler = { path = "../nova-scheduler" }
tracing = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
# Optional smoke tests that exercise the DAP adapter against a real JVM.
#
# These tests are ignored by default and should be enabled explicitly:
#   cargo test -p nova-dap --features real-jvm-tests
real-jvm-tests = []

[dev-dependencies]
tempfile = "3.10.1"
nova-jdwp = { path = "../nova-jdwp", features = ["wire-test-support"] }
