[package]
name = "nova-dap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Nova Java debug adapter (DAP)."
autotests = false

[package.metadata.dist]
dist = true

[dependencies]
async-recursion = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
base64 = "0.22"
libc = "0.2"
tempfile = { workspace = true }

nova-core = { path = "../nova-core" }
nova-classfile = { path = "../nova-classfile" }
nova-db = { path = "../nova-db" }
nova-ide = { path = "../nova-ide" }
nova-project = { path = "../nova-project" }
nova-build = { path = "../nova-build" }
nova-jdwp = { path = "../nova-jdwp" }
nova-stream-debug = { path = "../nova-stream-debug" }
nova-metrics = { path = "../nova-metrics" }

# Hardening / crash recovery support.
nova-bugreport = { path = "../nova-bugreport" }
nova-config = { path = "../nova-config" }
nova-scheduler = { path = "../nova-scheduler" }
tracing = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
# Optional smoke tests that exercise the DAP adapter against a real JVM.
#
# Feature-gated by default. Enable with `--features real-jvm-tests`.
#
# When enabled, the real-JVM tests (`crates/nova-dap/tests/suite/real_jvm.rs`)
# print a message and return early if `java`/`javac` are missing (Rust has no
# built-in "skip"), so CI can still run them safely in environments without a
# JDK.
real-jvm-tests = []

[[test]]
name = "tests"
path = "tests/real_jvm.rs"

[[bin]]
name = "nova_dap_test_helper"
path = "tests/fixtures/nova_dap_test_helper.rs"

[dev-dependencies]
nova-jdwp = { path = "../nova-jdwp", features = ["wire-test-support"] }
